# fem-solver

./: .gitignore  CMakeLists.txt  beam.msh.opt  beam_initial.msh  dirichlet  flake.nix  neumann
src/: CMakeLists.txt  GmshSocket.h  MeshParser.cpp  MeshParser.h  a.out  beam.cpp  pend.msh  pend.msh.opt  solver.cpp
src/solvers/: CMakeLists.txt  SolverEigen.cpp  SolverEigen.h  SolverFEM.h
src/utils/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshParser.cpp  MeshParser.h  OnelabTools.cpp  OnelabTools.h
test/: CMakeLists.txt  MeshParserTest.cpp  MeshTest.cpp  SolverEigenTest.cpp
test/assets/: example_mesh.msh  triangle.msh
